fix(footer): add margin from top to prevent overlapping

--- a/frontend/src/Components/Footer/Footer.css
+++ b/frontend/src/Components/Footer/Footer.css
@@ -9,11 +9,13 @@
     display: flex;
     align-items: center;
     gap: 20px;
+    margin-top: 80px;
 }
 .footer-logo p{
     color: #383838;
     font-size: 46px;
     font-weight: 700;
+    
 }
 .footer-links{
     display: flex;
