--- a/frontend/src/Components/RelatedProducts/RelatedProducts.css
+++ b/frontend/src/Components/RelatedProducts/RelatedProducts.css
@@ -39,6 +39,7 @@
     .relatedproducts-items {
         gap: 20px;
         margin-top: 30px;
+        margin-bottom: 30px;
     }
 }
 
